--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@material-ui/icons": "^4.5.1",
     "@types/react-router": "^5.1.3",
     "@types/react-router-dom": "^5.1.3",
+    "@types/react-scroll": "^1.5.4",
     "babel-polyfill": "^6.26.0",
     "css-loader": "^3.4.2",
     "react": "^16.12.0",
