--- a/app/package.json
+++ b/app/package.json
@@ -41,6 +41,7 @@
     "@types/react-router": "^5.1.3",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-scroll": "^1.5.4",
+    "@types/styled-components": "^5.0.1",
     "babel-polyfill": "^6.26.0",
     "css-loader": "^3.4.2",
     "react": "^16.12.0",
@@ -49,6 +50,7 @@
     "react-router-dom": "^5.1.2",
     "react-scroll": "^1.7.16",
     "style-loader": "^1.1.2",
+    "styled-components": "^5.0.1",
     "typeface-roboto": "0.0.75"
   }
 }
