--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "build": "webpack --config webpack.config.js",
+    "build:docker": "webpack --config webpack-docker.config.js",
     "start": "webpack-dev-server --mode development --hot --open"
   },
   "author": "",
@@ -20,6 +21,7 @@
     "babel-plugin-transform-imports": "^2.0.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
+    "dotenv-webpack": "^1.7.0",
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
