--- a/app/package.json
+++ b/app/package.json
@@ -46,6 +46,7 @@
     "@types/react-scroll": "^1.5.4",
     "@types/styled-components": "^5.0.1",
     "babel-polyfill": "^6.26.0",
+    "core-js": "^2.6.11",
     "css-loader": "^3.4.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
