--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ DB_USER=example_user
 DB_PWD=example_pwd
 DB_HOST=example_host
 DB_PORT=exaple_port
+AUTH0_DOMAIN=dev-w3xfkh4k.auth0.com
+AUTH0_CLIENT_ID=Pe9Cr1hBBRjVH2gBzR9KWpF8xPGrDoyN
