--- a/app/package.json
+++ b/app/package.json
@@ -8,7 +8,8 @@
     "test:watch": "jest --watch",
     "build": "webpack --config webpack.config.js",
     "build:docker": "webpack --config webpack-docker.config.js",
-    "start": "webpack-dev-server --mode development --hot --open"
+    "start": "webpack-dev-server --mode development --hot --open",
+    "watch:flask": "webpack --config webpack-flask.config.js --watch"
   },
   "author": "",
   "license": "ISC",
