--- a/app/package.json
+++ b/app/package.json
@@ -55,6 +55,7 @@
     "react-scroll": "^1.7.16",
     "style-loader": "^1.1.2",
     "styled-components": "^5.0.1",
+    "styled-theming": "^2.2.0",
     "typeface-roboto": "0.0.75"
   }
 }
