--- a/app/package.json
+++ b/app/package.json
@@ -59,6 +59,6 @@
     "react-scroll": "^1.7.16",
     "style-loader": "^1.1.2",
     "styled-components": "^5.0.1",
-    "typeface-roboto": "0.0.75",
+    "typeface-roboto": "0.0.75"
   }
 }
