--- a/.github/workflows/build-dev-workflow.yaml
+++ b/.github/workflows/build-dev-workflow.yaml
@@ -23,6 +23,6 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: cd app
     - run: npm ci
-    - run: npm run build --if-present
+    - run: npm run build:docker
     - run: npm run test
     
