--- a/.github/workflows/build-dev-workflow.yaml
+++ b/.github/workflows/build-dev-workflow.yaml
@@ -2,9 +2,9 @@ name: Build application
 
 on:
   push:
-    branches: [ dev ]
+    branches: [ master ]
   pull_request:
-    branches: [ dev ]
+    branches: [ master ]
 
 jobs:
   build:
