--- a/.github/workflows/build-dev-workflow.yaml
+++ b/.github/workflows/build-dev-workflow.yaml
@@ -21,8 +21,7 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: cd app
-    - run: npm ci
+    - run: cd app && npm ci
     - run: npm run build:docker
     - run: npm run test
     
