babel-polyfill out, core-js with babel presets

--- a/app/package.json
+++ b/app/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "host-home",
+  "name": "home-unite-us",
   "version": "1.0.0",
-  "description": "Host Home POC for HackForLA",
-  "main": "index.js",
+  "description": "Home Unite Us: workflow management tool for empty bedrooms initiatives",
+  "private": true,
+  "proxy": "http://localhost:8080",
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watch",
@@ -10,17 +11,30 @@
     "build": "webpack --config webpack.config.js",
     "build:docker": "webpack --config webpack-docker.config.js",
     "start": "webpack-dev-server --mode development --hot --open",
-    "watch:flask": "webpack --config webpack-docker.config.js --watch --info-verbosity verbose"
+    "watch:flask": "webpack --config webpack-docker.config.js --watch --info-verbosity verbose",
+    "dev": "webpack-dev-server --mode development --open --hot --config webpack-local.config.js",
+    "build:prod": "webpack --mode production --progress --hide-modules",
+    "check-type": "tsc -w"
   },
-  "author": "",
+  "author": "Hack for LA",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.10.2",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/plugin-proposal-object-rest-spread": "^7.10.1",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/preset-react": "^7.10.1",
+    "@babel/preset-typescript": "^7.10.1",
+    "babel-loader": "^8.1.0",
+    "core-js": "^3.6.5",
+    "regenerator-runtime": "^0.13.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@types/jest": "^24.0.25",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
     "@types/yup": "^0.28.3",
+    "babel-jest": "^26.0.1",
     "babel-plugin-transform-imports": "^2.0.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
@@ -49,8 +63,6 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/react-scroll": "^1.5.4",
     "@types/styled-components": "^5.0.1",
-    "babel-polyfill": "^6.26.0",
-    "core-js": "^2.6.11",
     "css-loader": "^3.4.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
