--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,21 +1,47 @@
 {
+
     "compilerOptions": {
-        "outDir": "./dist/",
-        "sourceMap": true,
+        "target": "ESNext",
+        "module": "umd",
         "lib": [
-            "es2015",
-            "es6",
-            "dom",
-            "dom.iterable",
-            "esnext"
+          "ES2015",
+          "ES2016",
+          "ES2017",
+          "ES2018",
+          "ES2019",
+          "ES2020",
+          "ESNext",
+          "dom"
         ],
-        "noImplicitThis": true,
+        "jsx": "react",
+        "noEmit": true,
+        "sourceMap": true,
+        "strict": true,
         "noImplicitAny": true,
         "strictNullChecks": true,
-        "strict": true,
-        "module": "commonjs",
-        "target": "es5",
-        "esModuleInterop": true,
-        "jsx": "react",
-    }
+        "moduleResolution": "node",
+        "forceConsistentCasingInFileNames": true,
+        "esModuleInterop": true
+      },
+      "include": ["src"]
+    // Tyler 6/1/2020: Trying new config for better bundling
+    // "compilerOptions": {
+    //     "outDir": "./dist/",
+    //     "sourceMap": true,
+    //     "lib": [
+    //         "es2015",
+    //         "es6",
+    //         "dom",
+    //         "dom.iterable",
+    //         "esnext"
+    //     ],
+    //     "noImplicitThis": true,
+    //     "noImplicitAny": true,
+    //     "strictNullChecks": true,
+    //     "strict": true,
+    //     "module": "commonjs",
+    //     "target": "es5",
+    //     "esModuleInterop": true,
+    //     "jsx": "react",
+    // }
 }
