--- a/app/package.json
+++ b/app/package.json
@@ -64,6 +64,7 @@
     "@types/react-scroll": "^1.5.4",
     "@types/styled-components": "^5.0.1",
     "css-loader": "^3.4.2",
+    "identity-obj-proxy": "^3.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router": "^5.1.2",
