--- a/app/package.json
+++ b/app/package.json
@@ -25,9 +25,6 @@
     "@babel/preset-env": "^7.10.2",
     "@babel/preset-react": "^7.10.1",
     "@babel/preset-typescript": "^7.10.1",
-    "babel-loader": "^8.1.0",
-    "core-js": "^3.6.5",
-    "regenerator-runtime": "^0.13.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@types/jest": "^24.0.25",
@@ -35,15 +32,18 @@
     "@types/react-dom": "^16.9.4",
     "@types/yup": "^0.28.3",
     "babel-jest": "^26.0.1",
+    "babel-loader": "^8.1.0",
     "babel-plugin-transform-imports": "^2.0.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
+    "core-js": "^3.6.5",
     "dotenv-webpack": "^1.7.0",
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
     "mini-css-extract-plugin": "^0.9.0",
     "prettier": "^2.0.5",
+    "regenerator-runtime": "^0.13.5",
     "source-map-loader": "^0.2.4",
     "ts-jest": "^24.2.0",
     "ts-loader": "^6.2.1",
@@ -64,6 +64,7 @@
     "@types/react-scroll": "^1.5.4",
     "@types/styled-components": "^5.0.1",
     "css-loader": "^3.4.2",
+    "formik": "^2.1.5",
     "identity-obj-proxy": "^3.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -72,6 +73,7 @@
     "react-scroll": "^1.7.16",
     "style-loader": "^1.1.2",
     "styled-components": "^5.0.1",
-    "typeface-roboto": "0.0.75"
+    "typeface-roboto": "0.0.75",
+    "yup": "^0.29.2"
   }
 }
