--- a/app/package.json
+++ b/app/package.json
@@ -59,6 +59,7 @@
         "@fortawesome/react-fontawesome": "^0.1.8",
         "@material-ui/core": "^4.9.12",
         "@material-ui/icons": "^4.5.1",
+        "@material-ui/lab": "^4.0.0-alpha.56",
         "@types/react-router": "^5.1.3",
         "@types/react-router-dom": "^5.1.3",
         "@types/react-scroll": "^1.5.4",
