--- a/app/package.json
+++ b/app/package.json
@@ -35,7 +35,7 @@
         "babel-loader": "^8.1.0",
         "babel-plugin-transform-imports": "^2.0.0",
         "clean-webpack-plugin": "^3.0.0",
-        "copy-webpack-plugin": "^5.1.1",
+        "copy-webpack-plugin": "^5.1.2",
         "core-js": "^3.6.5",
         "dotenv-webpack": "^1.7.0",
         "file-loader": "^5.0.2",
@@ -48,9 +48,9 @@
         "ts-jest": "^24.2.0",
         "ts-loader": "^6.2.1",
         "typescript": "^3.7.4",
-        "webpack": "^4.41.5",
+        "webpack": "^4.46.0",
         "webpack-cli": "^3.3.10",
-        "webpack-dev-server": "^3.10.1"
+        "webpack-dev-server": "^3.11.2"
     },
     "dependencies": {
         "@auth0/auth0-spa-js": "^1.6.5",
@@ -74,6 +74,7 @@
         "react-router-dom": "^5.1.2",
         "react-scroll": "^1.7.16",
         "react-sortable-hoc": "^1.11.0",
+        "serialize-javascript": "^3.1.0",
         "style-loader": "^1.1.2",
         "styled-components": "^5.0.1",
         "typeface-roboto": "0.0.75",
