Add @typescript-eslint/no-var-requires override for webpack config file to eslint

--- a/app/.eslintrc
+++ b/app/.eslintrc
@@ -23,5 +23,13 @@
     "@typescript-eslint/explicit-module-boundary-types": 0,
     "prettier/prettier": ["warn", {"bracketSpacing": false}],
     "@typescript-eslint/no-empty-interface": 0
-  }
+  },
+  "overrides": [
+    {
+      "files": "webpack.config.js",
+      "rules": {
+        "@typescript-eslint/no-var-requires": 0
+      }
+    }
+  ]
 }
