--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -20,7 +20,7 @@
     "jsx": "react-jsx",
     "types": ["jest", "@testing-library/jest-dom"]
   },
-  "include": ["src"],
+  "include": ["src", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules", "**/*.spec.ts", "cypress/**/*"]
 }
 
