--- a/app/package.json
+++ b/app/package.json
@@ -59,10 +59,12 @@
     "eslint-plugin-react": "^7.26.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.7",
     "jest-watch-typeahead": "^1.0.0",
     "mini-css-extract-plugin": "^2.3.0",
     "style-loader": "^3.3.0",
+    "ts-node": "^10.4.0",
     "webpack-dev-server": "^4.2.1"
   }
 }
