--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -8,4 +8,5 @@ werkzeug == 0.16.1; python_version=="3.5" or python_version=="3.4"
 swagger-ui-bundle >= 0.0.2
 python_dateutil >= 2.6.0
 setuptools >= 21.0.0
-Flask == 1.1.2
+Flask == 1.1.4
+markupsafe == 2.0.1
