--- a/app/package.json
+++ b/app/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "test": "jest --env=jsdom",
-    "test-watch": "jest --watch --env=jsdom",
     "build": "webpack --config webpack.config.js --mode production",
     "dev": "webpack-dev-server --config webpack.config.js --mode development",
-    "storybook": "start-storybook -p 6006"
+    "test": "jest --env=jsdom",
+    "test-watch": "jest --watch --env=jsdom",
+    "cypress:open": "cypress open",
+    "storybook": "start-storybook -p 6006",
+    "lint": "eslint . --ext ts --ext tsx --max-warnings 0"
   },
   "author": "",
   "license": "ISC",
@@ -41,6 +43,7 @@
     "@storybook/addon-essentials": "^6.3.12",
     "@storybook/addon-links": "^6.3.12",
     "@storybook/react": "^6.3.12",
+    "@testing-library/cypress": "^8.0.2",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -51,9 +54,11 @@
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.3.0",
+    "cypress": "^9.5.2",
     "dotenv-webpack": "^7.0.3",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-jest": "^25.7.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.26.1",
