--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -18,10 +18,17 @@
     "noImplicitThis": true,
     "strictNullChecks": true,
     "jsx": "react-jsx",
-    "types": ["jest", "@testing-library/jest-dom"]
+    "types": ["jest", "@testing-library/jest-dom", "cypress"]
   },
   "include": ["src", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules", "**/*.spec.ts", "cypress/**/*"]
+  "exclude": [
+    "node_modules",
+    "**/*.spec.ts",
+    "cypress/**/*",
+    "webclient/**/*",
+    "webclient/**/*.ts",
+    "webclient/**/*.tsx"
+  ]
 }
 
 // {
