--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "@emotion/styled": "^11.3.0",
     "@mui/icons-material": "^5.0.0",
     "@mui/material": "^5.0.0",
+    "@reduxjs/toolkit": "^1.8.1",
     "@types/node": "^16.9.6",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
@@ -27,6 +28,7 @@
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.8",
     "react-router-dom": "^5.3.0",
     "regenerator-runtime": "^0.13.9",
     "ts-loader": "^9.2.6",
