--- a/app/package.json
+++ b/app/package.json
@@ -43,7 +43,8 @@
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.3",
     "webpack": "^5.53.0",
-    "webpack-cli": "^4.8.0"
+    "webpack-cli": "^4.8.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
