--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -5,6 +5,8 @@ WORKDIR /usr/src/app
 
 COPY requirements.txt /usr/src/app/
 
+RUN apk update && apk add build-base
+
 RUN pip3 install --no-cache-dir -r requirements.txt
 
 COPY . /usr/src/app
