--- a/api/openapi_server/openapi/paths/serviceProvider.yaml
+++ b/api/openapi_server/openapi/paths/serviceProvider.yaml
@@ -4,7 +4,7 @@ get:
     - service_provider
   operationId: get_service_provider_by_id
   parameters:
-    $ref: '#/components/parameters/ProviderId'
+    - $ref: '../parameters/_index.yaml#/ProviderId'
   responses:
     "200":
       content:
@@ -15,18 +15,14 @@ get:
                 format: int64
                 type: integer
             allOf:
-              - $ref: '#/components/schemas/HousingProgramServiceProvider'
+              - $ref: '../schemas/_index.yaml#/HousingProgramServiceProvider'
       description: Service provider found
     "400":
       description: Malformed request
     "404":
       description: Service provider not found
     default:
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/ApiResponse'
-      description: unexpected error
+      $ref: '../responses/_index.yaml#/UnexpectedError'
   x-openapi-router-controller: openapi_server.controllers.service_provider_controller
 put:
   summary: Update a housing program service provider
@@ -34,12 +30,12 @@ put:
     - service_provider
   operationId: update_service_provider
   parameters:
-    $ref: '#/components/parameters/ProviderId'
+    - $ref: '../parameters/_index.yaml#/ProviderId'
   requestBody:
     content:
       application/json:
         schema:
-          $ref: '#/components/schemas/HousingProgramServiceProvider'
+          $ref: '../schemas/_index.yaml#/HousingProgramServiceProvider'
   responses:
     "200":
       content:
@@ -50,7 +46,7 @@ put:
               format: int64
               type: integer
           allOf:
-            - $ref: '#/components/schemas/HousingProgramServiceProvider'
+            - $ref: '../schemas/_index.yaml#/HousingProgramServiceProvider'
       description: Successful operation
     "400":
       description: Malformed request
@@ -59,19 +55,15 @@ put:
     "405":
       description: Validation exception
     default:
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/ApiResponse'
-      description: unexpected error
+      $ref: '../responses/_index.yaml#/UnexpectedError'
   x-openapi-router-controller: openapi_server.controllers.service_provider_controller
-  delete:
+delete:
     summary: Delete a service provider
     tags:
       - service_provider
     operationId: delete_service_provider
     parameters:
-      $ref: '#/components/parameters/ProviderId'
+      - $ref: '../parameters/_index.yaml#/ProviderId'
     responses:
       "200":
         description: Service provider successfully deleted
@@ -80,9 +72,6 @@ put:
       "404":
         description: Service provider not found
       default:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/ApiResponse'
+        $ref: '../responses/_index.yaml#/UnexpectedError'
 
     x-openapi-router-controller: openapi_server.controllers.host_controller
