--- a/api/openapi_server/openapi/schemas/_index.yaml
+++ b/api/openapi_server/openapi/schemas/_index.yaml
@@ -5,7 +5,7 @@ HousingProgram:
       title: program_name
       type: string
     service_provider:
-      $ref: '#HousingProgramServiceProvider'
+      $ref: '#/HousingProgramServiceProvider'
   required:
     - program_name
     - service_provider
@@ -26,19 +26,19 @@ HousingProgramServiceProviders:
         title: id
         type: integer
     allOf:
-      - $ref: "#HousingProgramServiceProvider"
+      - $ref: "#/HousingProgramServiceProvider"
 IntakeQuestion:
   type: object
   properties:
     applicant_type:
-      $ref: '#ApplicantType'
+      $ref: '#/ApplicantType'
     question_text:
       title: question_text
       type: string
     intake_question_type:
-      $ref: '#IntakeQuestionType'
+      $ref: '#/IntakeQuestionType'
     intake_question_set:
-      $ref: '#IntakeQuestionSet'
+      $ref: '#/IntakeQuestionSet'
   required:
     - applicant_type
     - question_text
@@ -59,7 +59,7 @@ IntakeQuestionSet:
       title: question_set_name
       type: string
     housing_program:
-      $ref: '#HousingProgram'
+      $ref: '#/HousingProgram'
   required: 
     - question_set_name
     - housing_program
@@ -78,7 +78,7 @@ IntakeResponseValue:
       title: response_text
       type: string
     intake_question:
-      $ref: '#IntakeQuestion'
+      $ref: '#/IntakeQuestion'
   required:
     - response_text
     - intake_question
