--- a/api/openapi_server/openapi/paths/serviceProviders.yaml
+++ b/api/openapi_server/openapi/paths/serviceProviders.yaml
@@ -35,7 +35,7 @@ post:
                 description: ID of the newly created service provider
                 type: integer
               allOf: 
-                - $ref: '../schemas/_index.yaml#/HousingProgramServiceProvider'
+                $ref: '../schemas/_index.yaml#/HousingProgramServiceProvider'
       links:
         GetServiceProviderById:  
           operationId: getServiceProvider
