--- a/api/openapi_server/openapi/schemas/_index.yaml
+++ b/api/openapi_server/openapi/schemas/_index.yaml
@@ -31,11 +31,11 @@ HousingProgram:
       title: program_name
       type: string
     service_provider:
-      $ref: '#/HousingProgramServiceProvider'
+      $ref: '#/ServiceProvider'
   required:
     - program_name
     - service_provider
-HousingProgramServiceProvider:
+ServiceProvider:
   type: object
   properties:
     provider_name:           
@@ -43,16 +43,20 @@ HousingProgramServiceProvider:
       type: string
   required:
     - provider_name
-HousingProgramServiceProviders:
+ServiceProviderWithId:
+  allOf:
+    - $ref: '#/ServiceProvider'
+  type: object
+  properties:
+    id:
+      format: int64
+      type: integer
+  required:
+    - id
+ServiceProviders:
   type: array
   items:
-    properties:
-      id:
-        format: int64
-        title: id
-        type: integer
-      allOf:
-        $ref: "#/HousingProgramServiceProvider"
+    $ref: '#/ServiceProviderWithId'
 IntakeQuestion:
   type: object
   properties:
