move auth paths to separate files

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -10,6 +10,9 @@ COPY . ./
 # client package install
 RUN npm install
 
+# secrets
+COPY .env .
+
 # generate bundles from source
 RUN npm run build
 
