chore: fix paths in openapi spec to get build working

--- a/api/openapi_server/openapi/paths/auth/authConfirmForgotPassword.yaml
+++ b/api/openapi_server/openapi/paths/auth/authConfirmForgotPassword.yaml
@@ -22,7 +22,7 @@ post:
       content:
         application/json:
           schema:
-            $ref: "#/components/schemas/ApiResponse"
+            $ref: "../../openapi.yaml#/components/schemas/ApiResponse"
       description: successful operation
   tags:
     - auth
