--- a/api/openapi_server/openapi/paths/auth/authUser.yaml
+++ b/api/openapi_server/openapi/paths/auth/authUser.yaml
@@ -6,7 +6,7 @@ get:
       content:
         application/json:
           schema:
-            $ref: "#/components/schemas/ApiResponse"
+            $ref: "../../openapi.yaml#/components/schemas/ApiResponse"
       description: successful operation
   tags:
     - auth
