--- a/app/package.json
+++ b/app/package.json
@@ -1,19 +1,19 @@
 {
   "name": "home-unite-us",
+  "private": true,
   "version": "1.0.0",
-  "description": "",
   "scripts": {
-    "build": "webpack --config webpack.config.js --mode production",
-    "dev": "webpack-dev-server --config webpack.config.js --mode development",
-    "test": "jest --env=jsdom",
-    "test-watch": "jest --watch --runInBand --env=jsdom",
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
     "cypress:open": "cypress open",
-    "storybook": "start-storybook -p 6006",
     "lint": "eslint . --ext ts --ext tsx --max-warnings 0",
     "type-check": "npx tsc --noEmit",
     "prepare": "cd .. && husky install app/.husky",
     "pre-commit": "lint-staged",
-    "generate": "npx @rtk-query/codegen-openapi openapi-config.ts"
+    "generate": "npx @rtk-query/codegen-openapi openapi-config.ts",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "author": "",
   "license": "ISC",
@@ -23,70 +23,42 @@
     ]
   },
   "dependencies": {
-    "@auth0/auth0-react": "^1.8.0",
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
-    "@mui/icons-material": "^5.0.0",
-    "@mui/material": "^5.0.0",
-    "@reduxjs/toolkit": "^1.8.1",
-    "@rtk-query/codegen-openapi": "^1.0.0-alpha.1",
-    "@types/node": "^16.9.6",
-    "@types/react": "^17.0.24",
-    "@types/react-dom": "^17.0.9",
-    "core-js": "^3.18.1",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.8.6",
+    "@reduxjs/toolkit": "^1.8.3",
     "formik": "^2.2.9",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.8",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
-    "regenerator-runtime": "^0.13.9",
-    "ts-loader": "^9.2.6",
-    "typescript": "^4.4.3",
-    "webpack": "^5.53.0",
-    "webpack-cli": "^4.8.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.5",
-    "@babel/preset-env": "^7.15.6",
-    "@babel/preset-react": "^7.14.5",
-    "@babel/preset-typescript": "^7.15.0",
-    "@storybook/addon-actions": "^6.4.20",
-    "@storybook/addon-essentials": "^6.4.20",
-    "@storybook/addon-links": "^6.4.20",
-    "@storybook/builder-webpack5": "^6.4.20",
-    "@storybook/manager-webpack5": "^6.4.20",
-    "@storybook/react": "^6.4.20",
-    "@testing-library/cypress": "^8.0.2",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "@typescript-eslint/eslint-plugin": "^5.3.0",
-    "@typescript-eslint/parser": "^5.3.0",
-    "babel-jest": "^27.4.6",
-    "babel-loader": "^8.2.2",
-    "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^9.0.1",
-    "css-loader": "^6.3.0",
-    "cypress": "^9.5.2",
-    "dotenv-webpack": "^7.0.3",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-jest": "^25.7.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.26.1",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.3.2",
-    "husky": "^7.0.4",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.4.7",
-    "jest-watch-typeahead": "^1.0.0",
-    "lint-staged": "^12.3.7",
-    "mini-css-extract-plugin": "^2.3.0",
-    "style-loader": "^3.3.0",
-    "ts-node": "^10.4.0",
-    "webpack-dev-server": "^4.7.3"
-  },
-  "proxy": "http://127.0.0.1:8080/"
+    "@babel/core": "^7.18.6",
+    "@rtk-query/codegen-openapi": "^1.0.0-alpha.1",
+    "@testing-library/cypress": "^8.0.3",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.2.1",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
+    "@typescript-eslint/eslint-plugin": "^5.30.3",
+    "@typescript-eslint/parser": "^5.30.3",
+    "@vitejs/plugin-react": "^1.3.2",
+    "babel-loader": "^8.2.5",
+    "cypress": "^10.3.0",
+    "eslint": "^8.19.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-jest": "^26.5.3",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.30.1",
+    "husky": "^8.0.1",
+    "jest": "^28.1.2",
+    "jest-watch-typeahead": "^1.1.0",
+    "lint-staged": "^13.0.3",
+    "typescript": "^4.7.4",
+    "vite": "^2.9.13"
+  }
 }
