--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,79 +1,24 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "lib": ["es6", "dom", "dom.iterable", "esnext"],
-    "allowJs": true,
+    "target": "ESNext",
+    "useDefineForClassFields": true,
+    "lib": ["es6", "DOM", "DOM.Iterable", "ESNext"],
+    "allowJs": false,
     "skipLibCheck": true,
-    "esModuleInterop": true,
+    "esModuleInterop": false,
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
-    "moduleResolution": "node",
+    "module": "ESNext",
+    "moduleResolution": "Node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": false,
-    "noImplicitAny": true,
-    "noImplicitThis": true,
-    "strictNullChecks": true,
+    "noEmit": true,
     "jsx": "react-jsx",
-    "types": ["jest", "@testing-library/jest-dom", "cypress"]
+    "types": ["jest", "@testing-library/jest-dom", "@testing-library/cypress", "cypress"],
+    "baseUrl": "http://localhost:3000"
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx"],
-  "exclude": [
-    "node_modules",
-    "**/*.spec.ts",
-    "cypress/**/*",
-    "webclient/**/*",
-    "webclient/**/*.ts",
-    "webclient/**/*.tsx"
-  ]
+  "include": ["src", "*.ts"],
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
-
-// {
-//   "compilerOptions": {
-//       "target": "ESNext",
-//       "module": "umd",
-//       "lib": [
-//           "ES2015",
-//           "ES2016",
-//           "ES2017",
-//           "ES2018",
-//           "ES2019",
-//           "ES2020",
-//           "ESNext",
-//           "dom"
-//       ],
-//       "jsx": "react",
-//       "noEmit": true,
-//       "sourceMap": true,
-//       "strict": true,
-//       "noImplicitAny": true,
-//       "strictNullChecks": true,
-//       "moduleResolution": "node",
-//       "forceConsistentCasingInFileNames": true,
-//       "esModuleInterop": true
-//   },
-//   "include": ["src"]
-//   // Tyler 6/1/2020: Trying new config for better bundling
-//   // "compilerOptions": {
-//   //     "outDir": "./dist/",
-//   //     "sourceMap": true,
-//   //     "lib": [
-//   //         "es2015",
-//   //         "es6",
-//   //         "dom",
-//   //         "dom.iterable",
-//   //         "esnext"
-//   //     ],
-//   //     "noImplicitThis": true,
-//   //     "noImplicitAny": true,
-//   //     "strictNullChecks": true,
-//   //     "strict": true,
-//   //     "module": "commonjs",
-//   //     "target": "es5",
-//   //     "esModuleInterop": true,
-//   //     "jsx": "react",
-//   // }
-// }
