--- a/app/.eslintrc
+++ b/app/.eslintrc
@@ -1,6 +1,6 @@
 {
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint", "prettier", "jest"],
+  "plugins": ["@typescript-eslint", "prettier"],
   "extends": [
     "eslint:recommended",
     "plugin:react/recommended",
@@ -11,7 +11,6 @@
   "env": {
     "browser": true,
     "es6": true,
-    "jest/globals": true,
     "node": true
   },
   "settings": {
