--- a/app/package.json
+++ b/app/package.json
@@ -64,6 +64,7 @@
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "typescript": "^4.7.4",
-    "vite": "^2.9.13"
+    "vite": "^2.9.13",
+    "vitest": "^0.17.1"
   }
 }
