Create and run test test

--- a/app/package.json
+++ b/app/package.json
@@ -6,14 +6,16 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
+    "test": "vitest",
+    "coverage": "vitest run --coverage",
     "cypress:open": "cypress open",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook",
     "lint": "eslint . --ext ts --ext tsx --max-warnings 0",
     "type-check": "npx tsc --noEmit",
     "prepare": "cd .. && husky install app/.husky",
     "pre-commit": "lint-staged",
-    "generate": "npx @rtk-query/codegen-openapi openapi-config.ts",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "generate": "npx @rtk-query/codegen-openapi openapi-config.ts"
   },
   "author": "",
   "license": "ISC",
@@ -62,6 +64,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.30.1",
     "husky": "^8.0.1",
+    "jsdom": "^20.0.0",
     "lint-staged": "^13.0.3",
     "typescript": "^4.7.4",
     "vite": "^2.9.13",
