--- a/app/package.json
+++ b/app/package.json
@@ -66,6 +66,7 @@
     "husky": "^8.0.1",
     "jsdom": "^20.0.0",
     "lint-staged": "^13.0.3",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
     "vite": "^3.0.3",
     "vitest": "^0.17.1"
