--- a/api/openapi_server/openapi/paths/auth/authConfirmForgotPassword.yaml
+++ b/api/openapi_server/openapi/paths/auth/authConfirmForgotPassword.yaml
@@ -1,6 +1,6 @@
 post:
   description: Exchanges code for a new password
-  operationId: confirm_forgot_password
+  operationId: confirm_reset_password
   requestBody:
     content:
       application/json:
