--- a/.github/workflows/build-dev-workflow.yaml
+++ b/.github/workflows/build-dev-workflow.yaml
@@ -1,27 +1,23 @@
 name: Build application
-
 on:
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         node-version: [16.x]
-
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout source
+      uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
     - run: cd app && npm ci
-    - run: cd app && npm run build:docker
+    - run: cd app && npm run build
     - run: cd app && npm run test
     
