--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -17,6 +17,7 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "types": [
+      "vitest/globals",
       "@testing-library/jest-dom",
       "cypress",
       "@testing-library/cypress"
