--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,17 +3,27 @@ version: "3.9"
 services:
   db:
     image: postgres
+    restart: always
     volumes:
       - ./data/db:/var/lib/postgresql/data
     environment:
-      - POSTGRES_DB=postgres
+      - POSTGRES_DB=huu
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
+      - POSTGRES_PORT=5432
+    expose:
+      - 5432
   api:
     build:
       context: ./api
+    volumes:
+      - ./api:/usr/src/app
     ports:
       - "8080:8080"
+    environment:
+      - DATABASE_URL=postgresql://postgres:postgres@db:5432/huu
+    links:
+      - db
     depends_on:
       - db
   app:
@@ -23,3 +33,5 @@ services:
       - "4040:80"
     depends_on:
       - api
+volumes:
+  db-data:
