--- a/api/.env.example
+++ b/api/.env.example
@@ -4,3 +4,5 @@ COGNITO_REGION=
 COGNITO_REDIRECT_URI=http://localhost:4040/signin
 COGNITO_USER_POOL_ID=
 SECRET_KEY=
+COGNITO_ACCESS_ID=
+COGNITO_ACCESS_KEY=
