--- a/api/openapi_server/openapi/paths/auth/authInitalInvite.yaml
+++ b/api/openapi_server/openapi/paths/auth/authInitalInvite.yaml
@@ -1,6 +1,6 @@
 post:
-  description: Exchanges code for a new password
-  operationId: reset_password
+  description: Removes auto generated password and replaces with user assigned password. Used for account setup.
+  operationId: inital_sign_in_reset_password
   requestBody:
     content:
       application/json:
