--- a/.github/workflows/build-dev-workflow.yaml
+++ b/.github/workflows/build-dev-workflow.yaml
@@ -20,4 +20,8 @@ jobs:
     - run: cd app && npm ci
     - run: cd app && npm run build
     - run: cd app && npm run test
-    
+    - name: E2E Tests
+        uses: cypress-io/github-action@v2
+        with:
+          start: cd app && npm run dev
+          wait-on: 'http://localhost:4040'    
