--- a/.github/workflows/build-dev-workflow.yaml
+++ b/.github/workflows/build-dev-workflow.yaml
@@ -20,16 +20,8 @@ jobs:
       - run: cd app && npm ci
       - run: cd app && npm run build
       - run: cd app && npm run test
-  e2e:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      # Install NPM dependencies, cache them correctly
-      # and run all Cypress tests
       - name: Run E2E tests
         uses: cypress-io/github-action@v2
-        working-directory: ./app
         with:
-          build: cd app && npm run build
           start: cd app && run run dev
+          wait-on: http://localhost:4040
