--- a/.github/workflows/build-dev-workflow.yaml
+++ b/.github/workflows/build-dev-workflow.yaml
@@ -24,6 +24,6 @@ jobs:
         uses: cypress-io/github-action@v2
         with:
           install: false
-          project: ./app
+          working-directory: app
           start: run run dev
           wait-on: http://localhost:4040
