--- a/app/package.json
+++ b/app/package.json
@@ -70,6 +70,7 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
     "vite": "^3.2.5",
-    "vitest": "^0.31.1"
+    "vitest": "^0.31.1",
+    "whatwg-fetch": "^3.6.2"
   }
 }
