--- a/api/openapi_server/openapi/paths/auth/authSignin.yaml
+++ b/api/openapi_server/openapi/paths/auth/authSignin.yaml
@@ -15,11 +15,11 @@ post:
             - email
             - password
   responses:
-    "200":
+    '200':
       content:
         application/json:
           schema:
-            $ref: "../../openapi.yaml#/components/schemas/ApiResponse"
+            $ref: '../../openapi.yaml#/components/schemas/ApiResponse'
       description: successful operation
   tags:
     - auth
