initializes testing for guest dashboard

--- a/api/openapi_server/openapi/paths/guestApplicationManagement.yaml
+++ b/api/openapi_server/openapi/paths/guestApplicationManagement.yaml
@@ -1,5 +1,5 @@
 get:
-  summary: Get a list of tasks to complete application.
+  summary: Get a list of tasks or steps to complete application in order to complete the matching process.
   operationId: get_application_tasks
   responses:
     "200":
