Change username to email in invite route

--- a/api/openapi_server/openapi/paths/auth/authInvite.yaml
+++ b/api/openapi_server/openapi/paths/auth/authInvite.yaml
@@ -7,10 +7,10 @@ post:
         schema:
           type: object
           properties:
-            username:
+            email:
               type: string
           required:
-            - username
+            - email
   responses:
     '200':
       content:
