feat(api): Remove security token requirement from resend confirm email

--- a/api/openapi_server/openapi/paths/auth/authResendConfirmationCode.yaml
+++ b/api/openapi_server/openapi/paths/auth/authResendConfirmationCode.yaml
@@ -13,7 +13,7 @@ post:
             - email
   responses:
     '200':
-      description: successful operation
+      description: A confirmation code is being sent again.
       content:
         application/json:
           schema:
@@ -25,5 +25,3 @@ post:
   tags:
     - auth
   x-openapi-router-controller: openapi_server.controllers.auth_controller
-  security:
-    - jwt: ["secret"]
