--- a/api/tox.ini
+++ b/api/tox.ini
@@ -1,11 +1,13 @@
 [tox]
-envlist = py3
-skipsdist=True
+env_list =
+    py310
+minversion = 4.6.4
 
 [testenv]
-deps=-r{toxinidir}/requirements.txt
-     -r{toxinidir}/test-requirements.txt
-	 {toxinidir}
-
-commands=
-   pytest --cov=openapi_server
+description = run the tests with pytest
+package = wheel
+wheel_build_env = .pkg
+deps =
+    pytest>=6
+commands =
+    pytest {tty:--color=yes} {posargs}
