--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,5 +1,5 @@
 alembic==1.10.2
-attrs==21.4.0
+attrs==22.2.0
 boto3==1.22.10
 botocore==1.25.13
 certifi==2022.12.7
@@ -16,7 +16,7 @@ inflection==0.5.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
 jmespath==1.0.1
-jsonschema==4.4.0
+jsonschema==4.18.4
 Mako==1.2.4
 MarkupSafe==2.1.1
 packaging==21.3
@@ -35,3 +35,5 @@ typing_extensions==4.5.0
 urllib3==1.26.9
 Werkzeug==2.3.3
 zipp==3.11.0
+prance==23.6.21.0
+openapi-spec-validator==0.6.0
